<resources>
    <string name="app_name">VinPlayer</string>
    <string name="db_name">VinPlayer</string>
    <string name="db_version">1</string>

    <!--Broadcast Intent Names-->
    <string name="fileDeleted">fileDeleted</string>
    <string name="newSongLoaded">newSongLoaded</string>
    <string name="songPaused">songPaused</string>
    <string name="songResumed">songResumed</string>
    <string name="musicStopped">musicStopped</string>
    <string name="closePanel">closePanel</string>
    <string name="queueUpdated">queueUpdated</string>
    <string name="mediaListChanged">mediaListChanged</string>


    <!--media settings-->
    <string name="media_settings">media_settings</string>
    <string name="shuffle">shuffle</string>
    <string name="repeat_mode">repeatmode</string>
    <string name="action_search">search</string>


    <string name="ringdroid_app_name">Ringdroid</string><!--
     Main / media select activity
     -->
    <string name="main_activity_label">Ringdroid</string>
    <string name="search_edit_box">Search</string>
    <string name="button_start_record_activity">Record New</string>
    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>
    <string name="button_options">Options</string><!--
     Edit activity
     -->
    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="edit_intent">Edit</string>
    <string name="time_seconds">seconds</string><!-- After you save a notification or ringtone and have more options
         for what to do with them
-->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>
    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string><!-- Progress dialog text for loading, recording, or saving...
-->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string><!-- Image button descriptions for accessibility -->
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string><!--
     Menu items
     -->
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string><!--
     Context menu items
     -->
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string><!--
     File Save dialog
     -->
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="ringtone_type_label">Type:</string>
    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="ringtone_name_label">Name:</string>
    <string name="artist_name">VinPlayer</string><!--
     Delete confirmation dialog
     -->
    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Ringdroid!</string>
    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="delete_failed">Unable to delete file</string><!--
     Success and error messages
     -->
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string><!--
     Choose Contact Activity
     -->
    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string><!--
     About
     -->
    <string name="about_title">About Ringdroid</string>
    <string name="about_text">Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n</string>


    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="ui_settings">UI Settings</string>
    <string name="playbacksettings">PlayBack Settings</string>
    <string name="rescan_library">Rescan Library</string>
    <string name="settings">Settings</string>
    <string name="wifi">wifi</string>
    <string name="flash">Flash</string>
    <string name="rapid_play_mode">Rapid Play Mode</string>
    <string name="minimal_ui">Minimal UI</string>
    <string name="standard_ui">Standard UI</string>
    <string name="background">Background</string>
    <string name="ui">UI</string>
    <string name="color">Color</string>
    <string name="black_and_white">Black and White</string>
    <string name="fixed_background">Fixed</string>
    <string name="adaptive_background">Adaptive</string>
    <string name="now_playing_layout">Now Playing Layout</string>
    <string name="button_style">Button Style</string>
    <string name="notification_style">Notification Style</string>
    <string name="font_style">Font Style</string>
    <string name="show_on_screen_volume_controller">Show On Screen Volume Controller</string>
    <string name="fontstyledemo_font">ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789 abcdefghijklmnopqrstuvwxyz</string>
    <string name="auto_download_lyrics">Auto Download Lyrics</string>
    <string name="auto_download_artist_images">Auto Download Artist Images</string>
    <string name="img_quality">Image Quality</string>
    <string name="reset_all_settings">Reset all Settings</string>
    <string name="open_app_on_headset_plugged">On Headset Connected</string>
    <string name="pause_music_on_headset_disconnected">Pause Music on Headset Disconnected</string>
    <string name="pause_music_on_phone_call">Pause Music On Phone Call</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="open_app">Open App</string>
    <string name="shake_to_change_song">Shake to Change Song</string>
    <string name="wave_over_proximity_sensor_to_change_song">Wave over Proximity Sensor to Change Song</string>
    <string name="crossfade">CrossFade</string>
    <string name="normal">Normal</string>
    <string name="audio_transition">Audio Transition</string>
    <string name="flip_the_phone_to_pause_music">Flip the Phone to Pause Music</string>
    <string name="threshold_for_collecting_usage_data">Threshold for Collecting Usage Data</string>
    <string name="library">Library</string>
    <string name="now_playing">Now Playing</string>
    <string name="switch_to_minimal_mode">Switch to Minimal Mode</string>
    <string name="switch_to_standard_mode">Switch to Standard Mode</string>
    <string name="timer">Timer</string>

</resources>
