<?xml version="1.0" encoding="utf-8"?>
<com.mxn.soul.flowingdrawer_core.FlowingDrawer xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:edPosition="1"
    app:edMenuSize="240dp"
    app:edMenuBackground="@color/transparentBlack">

    <ScrollView
        android:id="@+id/activity_playback_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/settingstextsize"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/audio_transition"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/cross_fade"
                            android:text="@string/crossfade"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/normal"
                            android:text="@string/normal"/>

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/open_app_headset"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/open_app_on_headset_plugged"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/show_dialog"
                        android:text="@string/show_dialog"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/open_app"
                        android:text="@string/open_app"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/do_nothing"
                        android:text="@string/do_nothing"/>
                </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">
                <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/pause_headset_disconnect"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/pause_music_on_headset_disconnected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">
                <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/pause_on_phone_call"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/pause_music_on_phone_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">
                <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/shake_to_change"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/shake_to_change_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">
                <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/wave_to_change"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/wave_over_proximity_sensor_to_change_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                card_view:cardCornerRadius="4dp">
                <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/fliptosilence"
                    android:textSize="@dimen/settingstextsize"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/flip_the_phone_to_pause_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_elevation"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/settingstextsize"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/threshold_for_collecting_usage_data"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/threshold1"
                            android:text="5s"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/threshold2"
                            android:text="10s"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/threshold3"
                            android:text="15s"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/threshold4"
                            android:text="20s"/>

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>





        </LinearLayout>
    </ScrollView>
    <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
        android:id="@+id/menulayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/id_container_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/transparentDarkBlack">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?actionBarSize"
                    android:text="@string/rapid_play_mode"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/list_selector_background"
                    android:id="@+id/randomPlay"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flash"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/list_selector_background"
                    android:id="@+id/flashVisualizer"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/list_selector_background"
                    android:id="@+id/wifi"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/list_selector_background"
                    android:id="@+id/settings"/>
            </LinearLayout>
        </FrameLayout>

    </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>

</com.mxn.soul.flowingdrawer_core.FlowingDrawer>

